FEBE6/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
  namespace: 85c8a741-63c7-438b-8abe-9fe23efa41e5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
  template:
    metadata:
      labels:
        app: springboot-app-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
    spec:
      containers:
      - name: springboot
        image: ravi8881/85c8a741-63c7-438b-8abe-9fe23efa41e5-ravisuborg1-ravidevenv-9dd0c8bf-0a27-4293-9442-db5b86a7c07f-graph:20.0.0
        ports:
        - containerPort: 8081
