FEBE6/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
  namespace: 85c8a741-63c7-438b-8abe-9fe23efa41e4
spec:
  selector:
    app: springboot-app-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
