FEBE6/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
  namespace: 85c8a741-63c7-438b-8abe-9fe23efa41e4
  labels:
    app: springboot-app-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - backend:
              service:
                name: springboot-service-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
